Fix Announcements section item spacing

--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ body {
 .main__sidebar {
     grid-row: 2/3;
     display: grid;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto 1fr;
     gap: 40px;
 }
 
@@ -270,7 +270,11 @@ body {
 }
 
 .main__announcements li:not(:last-child){
-    border-bottom: 1px solid hsl(0, 0%, 87%);
+    border-bottom:1.5px solid hsl(0, 0%, 87%);
+}
+
+.main li {
+    padding: 20px 0;
 }
 
 .card__buttons {
